[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zendure-mqtt-hacs-integration"
version = "0.1.0"
description = "Zendure MQTT integration for Home Assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=1.6.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [".git", "custom_components"]

[tool.hatch.build.targets.wheel]
packages = ["custom_components/zendure_mqtt"]
